--- a/public/main.css
+++ b/public/main.css
@@ -1,4 +1,4 @@
-* {
+e* {
     box-sizing: border-box;
     ;
 }
@@ -202,10 +202,6 @@ button {
     list-style-type: none;
 }
 
-.how-it-works .title-details {
-    color: orange;
-}
-
 .career-img {
     background-image: url("./img/for-hire.jpg");
 }
@@ -218,9 +214,10 @@ button {
     background-image: url("./img/compare.jpg");
 }
 
-.details {
-    background: black;
-    color: white;
+.star-img {
+    background-image: url("./img/mountain.jpg");
+    height: 100%;
+    width: 50%;
 }
 
 .how-it-works .col-6 {
@@ -390,18 +387,23 @@ select::-ms-expand {
 
 /* college results & career results */
 
-.college-results, .career-results {
+.college-results,
+.career-results,
+.college-more-detail, 
+.saved-options {
     margin-top: 100px;
 }
 
 .college-results .col-3 {
     background-color: black;
-    color:white;
+    color: white;
     margin: 5px;
     font-weight: 200;
 }
 
-.college-results ul, .career-results ul {
+.college-results ul,
+.career-results ul,
+.college-more-detail ul {
     list-style-type: none;
 }
 
@@ -414,26 +416,33 @@ select::-ms-expand {
     text-transform: uppercase;
 }
 
-.more-details a, .save-career a {
-    color:white;
+.more-details a,
+.save-career a {
+    color: white;
 }
 
-.more-details a:hover, .save-career a:hover {
-    color:black;
+.more-details a:hover,
+.save-career a:hover {
+    color: black;
 }
 
-.college-results h1, .career-results h1 {
+.college-results h1,
+.career-results h1,
+.saved-options h1 {
     text-align: center;
     font-weight: 200;
     font-size: 4em;
 }
 
-.new-search a {
-    color:black;
+.new-search a,
+.return-to-search a {
+    color: black;
+    font-size: 18px;
 }
 
-.new-search a:hover {
-    color:orange;
+.new-search a:hover,
+.return-to-search a:hover {
+    color: orange;
 }
 
 .heavy {
@@ -446,7 +455,11 @@ select::-ms-expand {
 }
 
 .emphasis {
-    font-size: 2em;
+    font-size: 1.5em;
+    color: orange;
+    height: 40px;
+    display: block;
+    line-height: 25px;
 }
 
 .center {
@@ -462,20 +475,45 @@ select::-ms-expand {
     text-transform: uppercase;
 }
 
-.career-results li{
+.career-results li,
+.college-more-detail li {
     font-weight: 400;
     font-size: 30px;
-    
+
 }
 
-.career-results p {
+.college-more-detail .panel li {
+    font-weight: 200;
+    font-size: 20px;
+
+}
+
+.career-results p,
+.college-more-detail p,
+.comparison p {
     font-size: 36px;
 }
-.career-column {
-    margin-left: 10%;
+
+.career-results, 
+.comparison{
+    margin-top: 150px;
 }
 
-.save-career-btn {
+.career-results .col-6 {
+    height: 450px;
+    padding-left: 35px;
+    color: black;
+}
+
+.comparison .col-6 {
+    height: 450px;
+    padding-left: 35px;
+    color: black;
+    line-height: 50px;
+}
+
+
+.save-career-btn, .compare-button, .save-college-btn {
     background-color: orange;
     border: none;
     color: white;
@@ -490,9 +528,137 @@ select::-ms-expand {
     cursor: pointer;
     width: 30%;
     position: relative;
-    left: 60%
+    left: 35%
 }
 
+.saved-options .row {
+    margin-left: 10%;
+}
+
+.saved-options h1 {
+    font-weight: 200;
+    font-size: 4em;
+    text-align: left
+}
+
+.saved-options label {
+    font-weight: 200;
+    text-transform: uppercase;
+}
+
+.saved-options a {
+    color: #DCDCDC;
+    font-size: 20px;
+}
+
+.saved-options a:hover {
+    color: orange;
+}
+
+.divide {
+    font-size: 2em;
+}
+
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 96%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    left: 0px;
+}
+
+.active,
+.accordion:hover {
+    background-color: orange;
+}
+
+.panel {
+    padding: 0 18px;
+    background-color: white;
+    display: none;
+    overflow: hidden;
+}
+
+/* modal */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.fas {
+    font-size: 10px;
+}
+
+.fa-times {
+    margin-left: 10px;
+}
+
+.fa-info {
+    margin-left: 20px;
+}
+
+/* colors */
+
+.black {
+    background-color: black;
+}
+
+.orange {
+    color: orange;
+}
+
+.details {
+    background: black;
+    color: white;
+}
+
+.red {
+    background-color: red;
+}
+
+.gold {
+    background-color: #ffbf00;
+}
 
 footer {
     background: black;
@@ -526,19 +692,80 @@ footer {
 }
 
 
+/* checkbox */
+
+.checkbox-container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.checkbox-container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+}
+
+.checkbox-container:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+
+.checkbox-container input:checked ~ .checkmark {
+    background-color: #2196F3;
+}
+
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+.checkbox-container input:checked ~ .checkmark:after {
+    display: block;
+}
+
+.checkbox-container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+
 @media only screen and (max-width: 830px) {
     .select {
-    position: relative;
-    display: block;
-    width: 20em;
-    height: 3em;
-    line-height: 3;
-    background: #2c3e50;
-    overflow: hidden;
-    border-radius: .25em;
-    margin: 30px 0px 30px 0px;
-    left: 0;
-}
+        position: relative;
+        display: block;
+        width: 20em;
+        height: 3em;
+        line-height: 3;
+        background: #2c3e50;
+        overflow: hidden;
+        border-radius: .25em;
+        margin: 30px 0px 30px 0px;
+        left: 0;
+    }
 }
 
 @media only screen and (max-width: 830px) {
@@ -575,32 +802,43 @@ footer {
     }
 
     .more-details {
-    background-color: orange;
-    width: 102%;
-    margin-left: -1%;
-    margin-right: -1%;
-    text-align: center;
-    text-transform: uppercase;
+        background-color: orange;
+        width: 102%;
+        margin-left: -1%;
+        margin-right: -1%;
+        text-align: center;
+        text-transform: uppercase;
+    }
+
+
+    .select {
+        position: relative;
+        display: block;
+        width: 20em;
+        height: 3em;
+        line-height: 3;
+        background: #2c3e50;
+        overflow: hidden;
+        border-radius: .25em;
+        margin: 30px 0px 30px 0px;
+        left: 25%;
+    }
+
+    .input-square {
+        position: absolute;
+        top: 20%;
+        width: 100%;
+        left: 0%;
+        background-color: rgba(248, 248, 248, 1);
+        border-radius: 0;
+        font-family: 'Barlow', sans-serif;
+    }
+
+
 }
 
 
-.select {
-    position: relative;
-    display: block;
-    width: 20em;
-    height: 3em;
-    line-height: 3;
-    background: #2c3e50;
-    overflow: hidden;
-    border-radius: .25em;
-    margin: 30px 0px 30px 0px;
-    left: 0;
-}
-
-}
-
-
-@media only screen and (max-width: 760px){
+@media only screen and (max-width: 760px) {
     .container {
         position: relative;
         width: 100%;
@@ -608,20 +846,16 @@ footer {
 
 
 
-.select {
-    position: relative;
+    .select {
+position: relative;
     display: block;
-    width: 20em;
+    width: 15em;
     height: 3em;
     line-height: 3;
     background: #2c3e50;
     overflow: hidden;
     border-radius: .25em;
     margin: 30px 0px 30px 0px;
-    left: 0;
+    left: 10%;
+    }
 }
-}
-
-
-
-
